# whispertype

./: CMakeLists.txt  Info.plist  LICENSE  README.md  Whispertype.entitlements  build.sh
src/: appcontroller.h  appcontroller.mm  globalhotkey.h  globalhotkey.mm  groqtranscriber.h  groqtranscriber.mm  macpermissions.h  macpermissions.mm  main.mm  statusbarcontroller.h  statusbarcontroller.mm  textinjector.h  textinjector.mm  voicerecorder.h  voicerecorder.mm  whispertranscriber.h  whispertranscriber.mm
